discussion/kv_engine/154361/154361_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46482: Producer needs to account for namespacing of keys on commit/abort

The producer was always accounting in the buffer log for key size
with the namespace prefix which in mad-hatter is not transmitted
to the consumer (for DCP commit and abort). This leads to the consumer
acking for the key size without the prefix, leading to a DCP pause.

When creating a producer abort or commit message, use the 'collection'
mode of the stream to account for the correct key size.

Change-Id: I4a364463f94eec591ecf6a875f6b83ebfe3ee03d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-05-25 20:31:52.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-25 20:32:02.000000000
Message: 
Patch Set 4:

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/242194/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-25 20:50:01.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/30/ : FAILURE

Compile error at ..\kv_engine\cluster_framework\cluster.cc(157): error C2059: syntax error: "{" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/30/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/25/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/cluster_framework/cluster.cc:157:28:
error: expected "}"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/25/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/15/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/cluster_framework/cluster.cc:157:28: error: expected "}" [clang-diagnostic-error]
                           {"dcp_flow_control_policy", "none"}};
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/cluster_framework/cluster.cc:139:27: note: to match this "{"
    nlohmann::json json = {{"max_size", 67108864},
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/15/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/cluster_framework/cluster.cc:157:28:
error: expected "}" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/15/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/28/ : FAILURE

Compile error at [2021-05-25T20:34:07.111Z] ../kv_engine/cluster_framework/cluster.cc:157:28:
error: expected "}"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/28/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/29/ : FAILURE

Compile error at [2021-05-25T20:42:38.284Z] ../kv_engine/cluster_framework/cluster.cc:157:28:
error: expected "}"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/29/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/28/ : FAILURE

Compile error at [2021-05-25T20:35:27.556Z] ../kv_engine/cluster_framework/cluster.cc:157:28:
error: expected "}"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/28/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/28/ : FAILURE

Compile error at [2021-05-25T20:42:58.278Z] ../kv_engine/cluster_framework/cluster.cc:157:28:
error: expected ?}? before ?{? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/28/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/28/ : FAILURE

Compile error at [2021-05-25T20:38:51.250Z] ../kv_engine/cluster_framework/cluster.cc:157:28:
error: expected ?}? before ?{? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/28/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7715/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
